# ik

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md
src/ik/: __init__.py  cli.py
src/ik.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ik/completions/: __init__.py  ik.bash  ik.fish  ik.zsh
src/ik/driver/: __init__.py
src/ik/mail/: __init__.py
src/ik/vps/: __init__.py
tests/: conftest.py  test_cli.py  test_client.py  test_completion.py  test_drive_cmd.py  test_mail_cmd.py  test_models.py  test_vps_cmd.py
tests/fixtures/mail/: multipart.eml  plain.eml  rfc2231_filename.eml  with_attachment.eml
